VAPIS = \
	cogl-fixes.vapi \
	compat.vapi \
	config.vapi \
	libbamf3.vapi \
	gdesktopenums-3.0.vapi \
	gnome-desktop-3.0.vapi \
	libmutter.vapi \
	mutter-clutter-1.0.vapi \
	mutter-cogl-1.0.vapi \
	xfixes-4.0.vapi \
	$(NULL)

DEPS = \
	libbamf3.deps \
	libmutter.deps \
	mutter-clutter-1.0.deps \
	mutter-cogl-1.0.deps \
	gnome-desktop-3.0.deps \
	$(NULL)

EXTRA_DIST = \
	$(VAPIS) \
	$(DEPS) \
	$(NULL)

